--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ after_script:
   #- git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages #GH_TOKEN是在Travis中配置环境变量的名称
 env:
  global:
-   #- GH_REF: github.com/ttcode10/personalwebsite.github.io.git #设置GH_REF,换成自己用户名和仓库名
-   - GH_REF: github.com/ttcode10/personalwebsite.git #设置GH_REF,换成自己用户名和仓库名
+   - GH_REF: github.com/ttcode10/personalwebsite.github.io.git #设置GH_REF,换成自己用户名和仓库名
+   #- GH_REF: github.com/ttcode10/personalwebsite.git #设置GH_REF,换成自己用户名和仓库名
 
    
